# career-copilot

./: .gitignore  CLAUDE.md  README.md  profile.yaml.example  pyproject.toml
docs/: APIS.md  DECISIONS.md  PLAN.md
src/copilot/: __init__.py  cli.py  config.py  dashboard.py  formatting.py  geocode.py  industry.py  profile_fill.py  ranking.py  resume.py  rules.py  title_suggestions.py
src/copilot/db/: __init__.py  models.py  session.py
src/copilot/discovery/: adzuna.py  ats.py  ats_boards.py  ats_resolver.py  dedupe.py  jsearch.py  locations.py  matching.py  models.py  pipeline.py  remote_boards.py
src/copilot/email_agent/: outlook.py  provider.py
src/copilot/notify/: digest.py
src/copilot/scoring/: rubric.py  sponsorship.py
tests/: test_config.py  test_dashboard.py  test_db.py  test_digest.py  test_discovery.py  test_email_provider.py  test_formatting.py  test_profile_fill.py  test_ranking.py  test_resume_cache.py  test_rules.py  test_scoring.py  test_sponsorship.py  test_title_suggestions.py
