[project]
name = "career-copilot"
version = "0.1.0"
description = "Job-search copilot: discovers and scores jobs against your resume, tracks applications and visa sponsorship, monitors email replies, and preps you for interviews. Human always clicks submit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "pydantic[email]>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "ruamel-yaml>=0.18",
    "sqlalchemy>=2.0",
    "typer>=0.12",
]

[project.scripts]
copilot = "copilot.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]
